nf core standards updating documentation and loose ends gearing up to version 1

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -39,9 +39,19 @@ process {
     }
 
     withName: FASTP {
+        ext.args = { [ 
+            params.dont_eval_duplicates ? '--dont_eval_duplication'                             : '',
+            params.cut_right            ? '--cut_right'                                         : '',
+            params.window_size          ? "--cut_window_size ${params.window_size}"             : '',
+            params.mean_min_quality     ? "--cut_mean_quality ${params.mean_min_quality}"       : '',
+            params.pairedend_bp_corr    ? '--correction'                                        : '',
+            params.overlap_dif_limit    ? "--overlap_diff_limit ${params.overlap_dif_limit}"    : '',
+            params.clip_r1              ? "--trim_front1 ${params.clip_r1}"                     : '',
+            params.clip_r2              ? "--trim_front2 ${params.clip_r2}"                     : '',
+            params.trim_polyg           ? '--trim_poly_g'                                       : '',
+        ].join(' ').trim() }
         // umi specific arguments to fastp. see https://github.com/OpenGene/fastp
-        ext.umi_args = '--umi --umi_loc=read2 --umi_len=8 --umi_skip=2 --umi_prefix=UMI'
-        ext.args = '--detect_adapter_for_pe --dont_eval_duplication --cut_right --cut_window_size=25 --cut_mean_quality=20 --correction --overlap_diff_limit=1 --trim_poly_g --dont_eval_duplication --disable_length_filtering --trim_front1 6 --trim_front2 3'
+        ext.umi_args = params.umi_read_structure ?: ''
         publishDir = [
             [
                 path: { "${params.outdir}/fastp" },
@@ -109,7 +119,12 @@ process {
     }
 
     withName: CDHIT {
-        ext.args = ''
+        ext.args = { [
+            params.cluster_algorithm   ? "-g ${params.cluster_algorithm}"   : '',
+            params.description_length  ? "-d ${params.description_length}"  : '',
+            params.sequence_simularity ? '-c ' + params.sequence_simularity : ''
+        ].join(' ').trim() }
+
         publishDir = [
             [
                 path: { "${params.outdir}/${params.method}/reference/cdhit" },
@@ -147,7 +162,10 @@ process {
 
     withName: RAINBOW_DIV {
         // recommended static arguments
-        ext.args = '-f 0.5 -K 10'
+        ext.args = { [ 
+            params.similarity_fraction ? "-f ${params.similarity_fraction}" : '',
+            params.max_variants        ? "-K ${params.max_variants}"        : ''
+        ].join(' ').trim() }
         publishDir = [
             [
                 path: { "${params.outdir}/${params.method}/reference/rainbow_div" },
@@ -164,7 +182,13 @@ process {
 
     withName: RAINBOW_MERGE {
         // recommended static arguments
-        ext.args = '-r 2 -N10000 -R10000 -l 20 -f 0.75'
+        ext.args = { [
+            params.min_reads               ? "-r ${params.min_reads}"               : '',
+            params.max_clusters_for_merge  ? "-N${params.max_clusters_for_merge}"   : '',
+            params.max_reads_for_assembly  ? "-R${params.max_reads_for_assembly}"   : '',
+            params.min_overlap             ? "-l ${params.min_overlap}"             : '',
+            params.min_similarity_fraction ? "-f ${params.min_similarity_fraction}" : ''
+        ].join(' ').trim() }
         publishDir = [
             [
                 path: { "${params.outdir}/${params.method}/reference/rainbow_merge" },
@@ -214,12 +238,14 @@ process {
 
     withName: BWA_MEM {
         ext.args = { [
-            // recommended static arguments
-            '-L 20,5 -a -M -T 30',
             // set default scores for alignments 
-            params.matching_score ? '-A ' + params.matching_score : '-A 1',
-            params.mismatch_score ? '-B ' + params.mismatch_score : '-B 4',
-            params.gap_penalty    ? '-O ' + params.gap_penalty    : '-O 6'
+            params.clipping_penalty  ? '-L ' + params.clipping_penalty : '',
+            params.output_secondary  ? '-a'                            : '',
+            params.mark_short_as_sec ? '-M'                            : '',
+            params.min_aln_quality   ? '-T ' + params.min_aln_quality  : '',
+            params.matching_score    ? '-A ' + params.matching_score   : '',
+            params.mismatch_score    ? '-B ' + params.mismatch_score   : '',
+            params.gap_penalty       ? '-O ' + params.gap_penalty      : ''
         ].join(' ').trim() }
         
         ext.args2 = { [ 
@@ -235,11 +261,30 @@ process {
         ]
     }
 
-    /*
-
-    TODO: add support for 3 params.aligner
-
-    */
+    withName: BWAMEM2_MEM {
+        ext.args = { [
+            // set default scores for alignments 
+            params.clipping_penalty  ? '-L ' + params.clipping_penalty : '',
+            params.output_secondary  ? '-a'                            : '',
+            params.mark_short_as_sec ? '-M'                            : '',
+            params.min_aln_quality   ? '-T ' + params.min_aln_quality  : '',
+            params.matching_score    ? '-A ' + params.matching_score   : '',
+            params.mismatch_score    ? '-B ' + params.mismatch_score   : '',
+            params.gap_penalty       ? '-O ' + params.gap_penalty      : ''
+        ].join(' ').trim() }
+        
+        ext.args2 = { [ 
+            '-S -h -u',
+            params.quality_score ? '-q ' + params.quality_score   : '-q 1'
+        ].join(' ').trim() }
+        publishDir = [
+            [
+                path: { "${params.outdir}/${params.method}/alignments/samtools_stats/" },
+                mode: params.publish_dir_mode,
+                pattern: "*.bam"
+            ]
+        ]
+    }
 
     withName: UMITOOLS_DEDUP {
         ext.args = ''
@@ -313,7 +358,7 @@ process {
         ext.args = ''
         publishDir = [
             [
-                path: { "${params.outdir}/${params.method}/alignments/bedtools/" },
+                path: { "${params.outdir}/${params.method}/alignments/bedtools_bamtobed/" },
                 mode: params.publish_dir_mode,
                 pattern: "*.bed",
                 enabled: params.save_intervals
@@ -358,6 +403,7 @@ process {
     }
 
     withName: BEDTOOLS_MERGE_COV {
+        // static arguments may cause workflow to break if changed
         ext.args = '-c 4 -o sum'
         publishDir = [
             [
@@ -419,8 +465,14 @@ process {
     }
     
     withName: FREEBAYES {
-        // default static arguments
-        ext.args = '-m 5 -q 5 -E 3 --min-repeat-entropy 1 -n 10 -F 0.1'
+        ext.args = { [
+            params.min_map_qual       ? "-m ${params.min_map_qual}"                         : '',
+            params.min_base_qual      ? "-q ${params.min_base_qual}"                        : '',
+            params.complex_gap        ? "-E ${params.complex_gap}"                          : '',
+            params.use_best_n_alleles ? "-n ${params.use_best_n_alleles}"                   : '',
+            params.min_alt_fraction   ? "-F ${params.min_alt_fraction}"                     : '',
+            params.min_repeat_entropy ? "--min-repeat-entropy ${params.min_repeat_entropy}" : ''
+        ].join(' ').trim() }
     }
 
     withName: BCFTOOLS_SORT {
