--- a/nextflow.config
+++ b/nextflow.config
@@ -11,31 +11,73 @@ params {
 
     // Input options
     input                          = "${baseDir}/data/input.csv"
+    popmap                         = "${baseDir}/data/popmap.txt"
     
-    // Method options e.g.'denovo' or 'reference'
-    method                         = 'denovo'
-
-    // Denovo options
-    sequence_type                  = 'PE'
-    minReadDepth_WithinIndividual  = null // defaults to 2
-    minReadDepth_BetweenIndividual = null // defaults to 2
+    // Workflow options
+    method                         = 'denovo' // e.g.'denovo' or 'reference'
+    
+    // Type of RADseq
+    sequence_type                  = 'PE' // e.g. 'SE', 'PE', 'RPE', 'ROL', and 'OL'
 
     // Reference options
     genome                         = '/mnt/d/nextflow_testing/Grayling/data/CM014990.1.fna'
     igenomes_base                  = 's3://ngi-igenomes/igenomes'
     igenomes_ignore                = false
 
+    // Trimming options
+    cut_right                        = true
+    window_size                      = 25
+    mean_min_quality                 = 20
+    pairedend_bp_corr                = true
+    overlap_dif_limit                = 1
+    clip_r1                          = 6
+    clip_r2                          = 3
+    trim_polyg                       = true
+    dont_eval_duplicates             = false
+    umi_read_structure               = '--umi --umi_loc=read2 --umi_len=8 --umi_skip=2 --umi_prefix=UMI'
+
+    // Denovo options
+    minreaddepth_withinindividual   = null // defaults to 2
+    minreaddepth_betweenindividual  = null // defaults to 2
+    
+    // cdhit options 
+    cluster_algorithm              = 1 // slow but accurate algorithm (0 or 1)
+    description_length             = 100
+    sequence_simularity            = '.9' // may need to change depending on taxa
+    
+    // rainbow div options
+    similarity_fraction            = 0.5
+    max_variants                   = 10
+    
+    // rainbow merge options
+    min_reads                      = 2
+    max_clusters_for_merge         = 10000
+    max_reads_for_assembly         = 10000
+    min_overlap                    = 20
+    min_similarity_fraction        = 0.75
 
     // Alignment options
     aligner                        = 'bwa'
-    matching_score                 = null // defaults to 1
-    mismatch_score                 = null // defaults to 4
-    gap_penalty                    = null // defaults to 6
-    quality_score                  = 1 // defaults to 1 
+    clipping_penalty               = '20,5'
+    output_secondary               = true
+    mark_short_as_sec              = true
+    min_aln_quality                = 30
+    matching_score                 = 1 
+    mismatch_score                 = 4 
+    gap_penalty                    = 6
+    quality_score                  = 1  
 
-    // Variant Calling options
+    // Interval options
     subset_intervals_channel       = null
-    splitByReadCoverage            = '500000'
+    max_read_coverage_to_split     = '500000'
+
+    // Freebayes options
+    min_map_qual                   = 5
+    min_base_qual                  = 5
+    complex_gap                    = 3
+    use_best_n_alleles             = 1
+    min_alt_fraction               = 10
+    min_repeat_entropy             = 0.1
 
     // Intermediate files
     save_trimmed                   = false
@@ -45,7 +87,7 @@ params {
     save_cdhit_clstr               = false
     save_trim_adapters_fastp       = false
     save_reference_fai             = false
-    save_intervals                 = true
+    save_intervals                 = false
     save_freebayes_intervals       = false
 
     // MultiQC options
@@ -64,8 +106,7 @@ params {
     help                       = false
     validate_params            = true
     show_hidden_params         = false
-    schema_ignore_params       = params.schema_ignore_params = "publish_dir_mode,split-by-read-coverage,splitByReadCoverage,aligner,save_freebayes_intervals,save_intervals,save_reference_fai,save_trim_adapters_fastp,save_cdhit_clstr,save_seqtk_seq_fasta,save_uniq_full_fasta,save_uniqseq,save_trimmed,min-read-depth_Between-individual,minReadDepth_BetweenIndividual,minReadDepth_WithinIndividual,min-read-depth_Within-individual,sequence_type,method,genomes" 
-    enable_conda               = false
+    schema_ignore_params       = 'genomes,method_options,publish_dir_mode,method_options,publish_dir_mode,save_freebayes_intervals,save_intervals,save_reference_fai,save_trim_adapters_fastp,save_cdhit_clstr,save_seqtk_seq_fasta,save_uniq_full_fasta,save_uniqseq,save_trimmed,min_repeat_entropy,min_alt_fraction,use_best_n_alleles,complex_gap,min_base_qual,min_map_qual,max_read_coverage_to_split,subset_intervals_channel,quality_score,gap_penalty,mismatch_score,matching_score,min_aln_quality,mark_short_as_sec,output_secondary,clipping_penalty,aligner,min_similarity_fraction,min_overlap,max_reads_for_assembly,max_clusters_for_merge,min_reads,max_variants,similarity_fraction,sequence_simularity,description_length,cluster_algorithm,minreaddepth_betweenindividual,minreaddepth_withinindividual,umi_read_structure,dont_eval_duplicates,trim_polyg,clip_r2,clip_r1,overlap_dif_limit,pairedend_bp_corr,mean_min_quality,window_size,cut_right,sequence_type,method,popmap'
     method_options             = ' denovo, reference'
 
     // Config options
@@ -111,6 +152,7 @@ profiles {
         podman.enabled         = false
         shifter.enabled        = false
         charliecloud.enabled   = false
+        params.enable_conda    = false
     }
     singularity {
         singularity.enabled    = true
@@ -119,6 +161,7 @@ profiles {
         podman.enabled         = false
         shifter.enabled        = false
         charliecloud.enabled   = false
+        params.enable_conda    = false
     }
     podman {
         podman.enabled         = true
@@ -126,6 +169,7 @@ profiles {
         singularity.enabled    = false
         shifter.enabled        = false
         charliecloud.enabled   = false
+        params.enable_conda    = false
     }
     shifter {
         shifter.enabled        = true
@@ -133,6 +177,7 @@ profiles {
         singularity.enabled    = false
         podman.enabled         = false
         charliecloud.enabled   = false
+        params.enable_conda    = false
     }
     charliecloud {
         charliecloud.enabled   = true
@@ -140,6 +185,7 @@ profiles {
         singularity.enabled    = false
         podman.enabled         = false
         shifter.enabled        = false
+        params.enable_conda    = false
     }
     test      { includeConfig 'conf/test.config'      }
     test_full { includeConfig 'conf/test_full.config' }
