--- a/conf/test.config
+++ b/conf/test.config
@@ -19,14 +19,14 @@ params {
     max_memory = '6.GB'
     max_time   = '6.h'
 
-    // Input data
-    // TODO nf-core: Specify the paths to your test data on nf-core/test-datasets
-    // TODO nf-core: Give any required params for the test so that command line flags are not needed
-    input  = 'https://raw.githubusercontent.com/nf-core/test-datasets/radseq/samplesheet/samplesheet_test_illumina_amplicon.csv'
+    input  = 'https://raw.githubusercontent.com/nf-core/test-datasets/radseq/samplesheet/samplesheet_test_ddRAD.csv'
 
     // Method
     method = 'denovo'
 
+    popmap = 'https://raw.githubusercontent.com/nf-core/test-datasets/radseq/ddRAD/popmap.txt'
+
     // Genome references
-    genome = 'R64-1-1'
+    genome = 'https://raw.githubusercontent.com/nf-core/test-datasets/radseq/ddRAD/CM014990.1.fna'
+
 }
