--- a/conf/test.config
+++ b/conf/test.config
@@ -29,4 +29,6 @@ params {
     // Genome references
     genome = 'https://raw.githubusercontent.com/nf-core/test-datasets/radseq/ddRAD/CM014990.1.fna'
 
+    umi_read_structure               = '--umi --umi_loc=read2 --umi_len=8 --umi_skip=2 --umi_prefix=UMI'
+
 }
