passes linting test

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -391,7 +391,7 @@ process {
     }
 
     withName: BEDTOOLS_COVERAGE {
-        ext.args = ''
+        ext.args = '-counts'
         publishDir = [
             [
                 path: { "${params.outdir}/${params.method}/alignments/bedtools_coverage/" },
@@ -500,7 +500,7 @@ process {
     }
 
     withName: BCFTOOLS_CONCAT {
-        ext.args = '--remove-duplicates'
+        ext.args = '--remove-duplicates --allow-overlaps'
         publishDir = [
             [
                 path: { "${params.outdir}/${params.method}/variant_calling/" },
