--- a/conf/test.config
+++ b/conf/test.config
@@ -16,18 +16,20 @@ params {
 
     // Limit resources so that this can run on GitHub Actions
     max_cpus   = 2
-    max_memory = '6.GB'
+    max_memory = '2.GB'
     max_time   = '6.h'
 
-    input  = 'https://raw.githubusercontent.com/nf-core/test-datasets/radseq/samplesheet/samplesheet_test_ddRAD.csv'
+    input  = 'https://raw.githubusercontent.com/Gabriel-A-Barrett/test-datasets/radseq/samplesheet/samplesheet_test_ddRAD.csv'
 
     // Method
     method = 'denovo'
 
-    popmap = 'https://raw.githubusercontent.com/nf-core/test-datasets/radseq/ddRAD/popmap.txt'
+    aligner = 'minimap2'
+
+    popmap = 'https://raw.githubusercontent.com/Gabriel-A-Barrett/test-datasets/radseq/testdata/ddRAD/popmap.txt'
 
     // Genome references
-    genome = 'https://raw.githubusercontent.com/nf-core/test-datasets/radseq/ddRAD/CM014990.1.fna'
+    genome = 'https://raw.githubusercontent.com/Gabriel-A-Barrett/test-datasets/radseq/testdata/ddRAD/CM014990.1.fna'
 
     umi_read_structure               = '--umi --umi_loc=read2 --umi_len=8 --umi_skip=2 --umi_prefix=UMI'
 
