--- a/subworkflows/nf-core/bam_dedup_stats_samtools_umitools/meta.yml
+++ b/subworkflows/nf-core/bam_dedup_stats_samtools_umitools/meta.yml
@@ -1,39 +1,40 @@
-name: bam_stats_samtools
-description: Produces comprehensive statistics from SAM/BAM/CRAM file
+name: "bam_dedup_stats_samtools_umitools"
+description: UMI-tools dedup, index BAM file and run samtools stats, flagstat and idxstats
 keywords:
-  - statistics
-  - counts
+  - umi
+  - dedup
+  - index
   - bam
   - sam
   - cram
 modules:
+  - umitools/dedup
+  - samtools/index
   - samtools/stats
   - samtools/idxstats
   - samtools/flagstat
 input:
-  - meta:
-      type: map
-      description: |
-        Groovy Map containing sample information
-        e.g. [ id:'test', single_end:false ]
-  - bam:
+  - bam_bai:
       type: file
       description: BAM/CRAM/SAM file
       pattern: "*.{bam,cram,sam}"
+  - get_dedup_stats:
+      type: boolean
+      description: |
+        Generate output stats when running "umi_tools dedup"
+output:
+  - bam:
+      type: file
+      description: Umi deduplicated BAM/CRAM/SAM file
+      pattern: "*.{bam,cram,sam}"
   - bai:
       type: file
-      description: Index for BAM/CRAM/SAM file
+      description: Umi deduplicated BAM/CRAM/SAM samtools index
       pattern: "*.{bai,crai,sai}"
-  - fasta:
+  - csi:
       type: file
-      description: Reference genome fasta file
-      pattern: "*.{fasta,fa}"
-output:
-  - meta:
-      type: map
-      description: |
-        Groovy Map containing sample information
-        e.g. [ id:'test', single_end:false ]
+      description: CSI samtools index
+      pattern: "*.csi"
   - stats:
       type: file
       description: File containing samtools stats output
@@ -52,3 +53,4 @@ output:
       pattern: "versions.yml"
 authors:
   - "@drpatelh"
+  - "@KamilMaliszArdigen"
