--- a/conf/modules.config
+++ b/conf/modules.config
@@ -91,7 +91,7 @@ process {
     }
 
     withName: SEQTK_SEQ {
-        ext.args = ''
+        ext.args = '-F I'
         publishDir = [
             path: { "${params.outdir}/${params.method}/reference/seqtk/" },
             mode: params.publish_dir_mode,
@@ -380,6 +380,7 @@ process {
 
     withName: BEDTOOLS_SORT {
         ext.args = ''
+        ext.prefix = 'Golden_sort'
         publishDir = [
             [
                 path: { "${params.outdir}/${params.method}/alignments/bedtools_sort/" },
@@ -477,6 +478,7 @@ process {
 
     withName: BCFTOOLS_SORT {
         ext.args = ''
+        ext.prefix = "Golden_sort"
         publishDir = [
             [
                 path: { "${params.outdir}/${params.method}/variant_calling/intervals/" },
