--- a/conf/test.config
+++ b/conf/test.config
@@ -19,7 +19,7 @@ params {
     max_memory = '2.GB'
     max_time   = '6.h'
 
-    input  = 'https://raw.githubusercontent.com/Gabriel-A-Barrett/test-datasets/radseq/samplesheet/samplesheet_test_ddRAD.csv'
+    input  = '/mnt/d/nextflow_testing/radseq/input.csv'
 
     // Method
     method = 'denovo'
