--- a/modules/nf-core/bedtools/merge/meta.yml
+++ b/modules/nf-core/bedtools/merge/meta.yml
@@ -1,7 +1,7 @@
 name: bedtools_merge
 description: combines overlapping or “book-ended” features in an interval file into a single feature which spans all of the combined features.
 keywords:
-  - cov
+  - bed
   - merge
 tools:
   - bedtools:
@@ -15,23 +15,25 @@ input:
       description: |
         Groovy Map containing sample information
         e.g. [ id:'test', single_end:false ]
-  - cov:
+  - bed:
       type: file
-      description: Input COV file
-      pattern: "*.{cov}"
+      description: Input BED file
+      pattern: "*.{bed}"
 output:
   - meta:
       type: map
       description: |
         Groovy Map containing sample information
         e.g. [ id:'test', single_end:false ]
-  - cov:
+  - bed:
       type: file
       description: Overlapped bed file with combined features
-      pattern: "*.{cov}"
+      pattern: "*.{bed}"
   - versions:
       type: file
       description: File containing software versions
       pattern: "versions.yml"
 authors:
-  - "@Gabriel-A-Barrett"
+  - "@Emiller88"
+  - "@sruthipsuresh"
+  - "@drpatelh"
