moved bedtools args to processes, linting, adding to output.md

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -77,7 +77,7 @@ process {
             path: { "${params.outdir}/${params.method}/reference/" },
             mode: params.publish_dir_mode,
             pattern: "*.uniq.seqs",
-            enabled: params.save_uniqseq
+            enabled: params.denovo_intermediate_files
         ]
     }
 
@@ -86,7 +86,7 @@ process {
             path: { "${params.outdir}/${params.method}/reference/" },
             mode: params.publish_dir_mode,
             pattern: "*_uniq.full.fasta",
-            enabled: params.save_uniq_full_fasta
+            enabled: params.denovo_intermediate_files
         ]
     }
 
@@ -96,7 +96,7 @@ process {
             path: { "${params.outdir}/${params.method}/reference/seqtk/" },
             mode: params.publish_dir_mode,
             pattern: "*.seqtk-seq.*.gz",
-            enabled: params.save_seqtk_seq_fasta
+            enabled: params.denovo_intermediate_files
         ]
     }
 
@@ -107,13 +107,13 @@ process {
                 path: { "${params.outdir}/${params.method}/reference/fastp/" },
                 mode: params.publish_dir_mode,
                 pattern: "*.uniq.fasta",
-                enabled: params.save_trim_adapters_fastp
+                enabled: params.denovo_intermediate_files
             ],
             [
-            path: { "${params.outdir}/${params.method}/reference/fastp/" },
-            mode: params.publish_dir_mode,
-            pattern: "*.totaluniqseq",
-            enabled: params.save_trim_adapters_fastp
+                path: { "${params.outdir}/${params.method}/reference/fastp/" },
+                mode: params.publish_dir_mode,
+                pattern: "*.totaluniqseq",
+                enabled: params.denovo_intermediate_files
             ]
         ]
     }
@@ -129,13 +129,15 @@ process {
             [
                 path: { "${params.outdir}/${params.method}/reference/cdhit" },
                 mode: params.publish_dir_mode,
-                pattern: "*_cdhit.log"
+                pattern: "*_cdhit.log",
+                enabled: params.denovo_intermediate_files
+
             ],
             [
                 path: { "${params.outdir}/${params.method}/reference/cdhit" },
                 mode: params.publish_dir_mode,
                 pattern: "*.clstr",
-                enabled: params.save_cdhit_clstr
+                enabled: params.denovo_intermediate_files
             ]
         ]
     }
@@ -145,17 +147,20 @@ process {
             [
                 path: { "${params.outdir}/${params.method}/reference/cdhit_to_rbdiv" },
                 mode: params.publish_dir_mode,
-                pattern: "*.sort.contig.cluster.ids"
+                pattern: "*.sort.contig.cluster.ids",
+                enabled: params.denovo_intermediate_files
             ],
             [
                 path: { "${params.outdir}/${params.method}/reference/cdhit_to_rbdiv" },
                 mode: params.publish_dir_mode,
-                pattern: "*.contig.cluster.totaluniqseq"
+                pattern: "*.contig.cluster.totaluniqseq",
+                enabled: params.denovo_intermediate_files
             ],
             [
                 path: { "${params.outdir}/${params.method}/reference/cdhit_to_rbdiv" },
                 mode: params.publish_dir_mode,
-                pattern: "*.rcluster"
+                pattern: "*.rcluster",
+                enabled: params.denovo_intermediate_files
             ]
         ]
     }
@@ -170,12 +175,14 @@ process {
             [
                 path: { "${params.outdir}/${params.method}/reference/rainbow_div" },
                 mode: params.publish_dir_mode,
-                pattern: "*_rbdiv.out"
+                pattern: "*_rbdiv.out",
+                enabled: params.denovo_intermediate_files
             ],
             [
                 path: { "${params.outdir}/${params.method}/reference/rainbow_div" },
                 mode: params.publish_dir_mode,
-                pattern: "*.log"
+                pattern: "*.log",
+                enabled: params.denovo_intermediate_files
             ]
         ]
     }
@@ -193,12 +200,14 @@ process {
             [
                 path: { "${params.outdir}/${params.method}/reference/rainbow_merge" },
                 mode: params.publish_dir_mode,
-                pattern: "*_rbmerge.log"
+                pattern: "*_rbmerge.log",
+                enabled: params.denovo_intermediate_files
             ],
             [
                 path: { "${params.outdir}/${params.method}/reference/rainbow_merge" },
                 mode: params.publish_dir_mode,
-                pattern: "*_rbmerge.out"
+                pattern: "*_rbmerge.out",
+                enabled: params.denovo_intermediate_files
             ]
         ]
     }
@@ -218,7 +227,7 @@ process {
         publishDir = [
             path: { "${params.outdir}/${params.method}/reference/index" },
             mode: params.publish_dir_mode,
-            enabled: params.save_reference_fai,
+            enabled: params.save_reference_indices,
             pattern: "*.fai"
         ]
     }
@@ -230,8 +239,8 @@ process {
             [
                 path: { "${params.outdir}/${params.method}/reference/index/" },
                 mode: params.publish_dir_mode,
-                enabled: params.save_reference_fai,
-                pattern: "*.fai"
+                enabled: params.save_reference_indices,
+                pattern: "bwa/*"
             ]
         ]
     }
@@ -358,7 +367,7 @@ process {
         ext.args = ''
         publishDir = [
             [
-                path: { "${params.outdir}/${params.method}/alignments/bedtools_bamtobed/" },
+                path: { "${params.outdir}/${params.method}/alignments/intervals/bedtools_bamtobed/" },
                 mode: params.publish_dir_mode,
                 pattern: "*.bed",
                 enabled: params.save_intervals
@@ -370,7 +379,7 @@ process {
         ext.args = ''
         publishDir = [
             [
-                path: { "${params.outdir}/${params.method}/alignments/bedops_merge/" },
+                path: { "${params.outdir}/${params.method}/alignments/intervals/bedops_merge/" },
                 mode: params.publish_dir_mode,
                 pattern: "*.bed",
                 enabled: params.save_intervals
@@ -380,10 +389,10 @@ process {
 
     withName: BEDTOOLS_SORT {
         ext.args = ''
-        ext.prefix = 'Golden_sort'
+        ext.prefix = ''
         publishDir = [
             [
-                path: { "${params.outdir}/${params.method}/alignments/bedtools_sort/" },
+                path: { "${params.outdir}/${params.method}/alignments/intervals/bedtools_sort/" },
                 mode: params.publish_dir_mode,
                 pattern: "*.bed",
                 enabled: params.save_intervals
@@ -395,7 +404,7 @@ process {
         ext.args = '-counts'
         publishDir = [
             [
-                path: { "${params.outdir}/${params.method}/alignments/bedtools_coverage/" },
+                path: { "${params.outdir}/${params.method}/alignments/intervals/bedtools_coverage/" },
                 mode: params.publish_dir_mode,
                 pattern: "*.cov",
                 enabled: params.save_intervals
@@ -404,11 +413,10 @@ process {
     }
 
     withName: BEDTOOLS_MERGE_COV {
-        // static arguments may cause workflow to break if changed
-        ext.args = '-c 4 -o sum'
+        ext.args = ''
         publishDir = [
             [
-                path: { "${params.outdir}/${params.method}/alignments/bedtools_merge/" },
+                path: { "${params.outdir}/${params.method}/alignments/intervals/bedtools_merge/" },
                 mode: params.publish_dir_mode,
                 pattern: "*.cov",
                 enabled: params.save_intervals
@@ -420,19 +428,19 @@ process {
         ext.args = ''
         publishDir = [
             [
-                path: { "${params.outdir}/${params.method}/alignments/bedtools_makewindows/" },
+                path: { "${params.outdir}/${params.method}/alignments/intervals/bedtools_makewindows/" },
                 mode: params.publish_dir_mode,
                 pattern: "*.tab",
                 enabled: params.save_intervals
             ],
             [
-                path: { "${params.outdir}/${params.method}/alignments/bedtools_makewindows/" },
+                path: { "${params.outdir}/${params.method}/alignments/intervals/bedtools_makewindows/" },
                 mode: params.publish_dir_mode,
                 pattern: "_cov.low.stats",
                 enabled: params.save_intervals
             ],
             [
-                path: { "${params.outdir}/${params.method}/alignments/bedtools_makewindows/" },
+                path: { "${params.outdir}/${params.method}/alignments/intervals/bedtools_makewindows/" },
                 mode: params.publish_dir_mode,
                 pattern: "_cov.low.stats",
                 enabled: params.save_intervals
@@ -444,7 +452,7 @@ process {
         ext.args = ''
         publishDir = [
             [
-                path: { "${params.outdir}/${params.method}/alignments/bedtools_intersect/" },
+                path: { "${params.outdir}/${params.method}/alignments/intervals/bedtools_intersect/" },
                 mode: params.publish_dir_mode,
                 pattern: "*.bed",
                 enabled: params.save_intervals
@@ -457,7 +465,7 @@ process {
         ext.args = ''
         publishDir = [
             [
-                path: { "${params.outdir}/${params.method}/alignments/create_intervals/" },
+                path: { "${params.outdir}/${params.method}/alignments/intervals/create_intervals/" },
                 mode: params.publish_dir_mode,
                 pattern: "mapped.*.bed",
                 enabled: params.save_intervals
@@ -474,6 +482,14 @@ process {
             params.min_alt_fraction   ? "-F ${params.min_alt_fraction}"                     : '',
             params.min_repeat_entropy ? "--min-repeat-entropy ${params.min_repeat_entropy}" : ''
         ].join(' ').trim() }
+        publishDir = [
+            [
+                path: { "${params.outdir}/${params.method}/variant_calling/intervals" },
+                mode: params.publish_dir_mode,
+                pattern: "*.vcf.gz",
+                enabled: params.save_freebayes_intervals
+            ]
+        ]
     }
 
     withName: BCFTOOLS_SORT {
@@ -508,7 +524,6 @@ process {
                 path: { "${params.outdir}/${params.method}/variant_calling/" },
                 mode: params.publish_dir_mode,
                 pattern: "*.gz",
-                enabled: params.save_freebayes_intervals
             ]
         ]
     }
