--- a/nextflow.config
+++ b/nextflow.config
@@ -80,15 +80,11 @@ params {
     min_repeat_entropy             = 0.1
 
     // Intermediate files
-    save_trimmed                   = false
-    save_uniqseq                   = false
-    save_uniq_full_fasta           = false
-    save_seqtk_seq_fasta           = false
-    save_cdhit_clstr               = false
-    save_trim_adapters_fastp       = false
-    save_reference_fai             = false
-    save_intervals                 = false
-    save_freebayes_intervals       = false
+    save_trimmed                   = true
+    denovo_intermediate_files      = true
+    save_reference_indices         = true
+    save_intervals                 = true
+    save_freebayes_intervals       = true
 
     // MultiQC options
     multiqc_config                 = null
