adding modules.config changes

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -401,7 +401,7 @@ process {
     }
 
     withName: BEDTOOLS_COVERAGE {
-        ext.args = '-counts'
+        ext.args = ''
         publishDir = [
             [
                 path: { "${params.outdir}/${params.method}/alignments/intervals/bedtools_coverage/" },
